--- a/backend/package.json
+++ b/backend/package.json
@@ -4,9 +4,9 @@
   "type": "module",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon server.js",
-    "build":"nodemon server.js"
+    "start": "node server.js",         
+    "dev": "nodemon server.js",        
+    "build": "echo 'No build step for backend'"   
   },
   "keywords": [],
   "author": "",
